# clmm

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
cli/: createConfig.ts  createPool.ts  fetchPool.ts  index.ts  updateFundFee.ts  updateProtocolFee.ts  utils.ts
client/: Cargo.toml
client/src/: main.rs
client/src/instructions/: amm_instructions.rs  events_instructions_parse.rs  utils.rs
programs/amm/src/: lib.rs
programs/clmm/: Cargo.toml
programs/clmm/src/: error.rs  lib.rs
scripts/: add-dynamic-tick-array-to-idl.js  createAmmConfig.ts  getAmmConfig.ts  post-build-idl-update.sh
sdk/: .npmignore  README.md  jest.config.ts  package.json  tsconfig.json
sdk/examples/: devnet-sdk-test.ts  execute-devnet-swap.ts  scan-all-devnet-pools.ts  swap-example.ts  test-price-api.ts
sdk/idl/: stabble_clmm.json
sdk/lib/: client.d.ts  client.d.ts.map  clmm.d.ts  clmm.d.ts.map  constants.d.ts  constants.d.ts.map  index.d.ts  index.d.ts.map  index.js  index.mjs  pool-manager.d.ts  pool-manager.d.ts.map  position-manager.d.ts  position-manager.d.ts.map  rewards.d.ts  rewards.d.ts.map  swap.d.ts  swap.d.ts.map  types.d.ts  types.d.ts.map
sdk/lib/api/: config.d.ts  config.d.ts.map  index.d.ts  index.d.ts.map  pools.d.ts  pools.d.ts.map
sdk/lib/utils/: index.d.ts  index.d.ts.map  math.d.ts  math.d.ts.map  pda.d.ts  pda.d.ts.map  pool.d.ts  pool.d.ts.map  tick.d.ts  (+3 more)
sdk/scripts/: generate-clients.ts
sdk/src/: client.ts  clmm.ts  constants.ts  index.ts  pool-manager.ts  position-manager.ts  rewards.ts  swap.ts  types.ts
(+59 files in other folders)
