[workspace]
resolver = "2"
members = ["programs/*", "client"]

[profile.test]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
debug = false

[profile.release.build-override]
opt-level = 'z'
incremental = false
codegen-units = 1
strip = "symbols"
debug = false